--- a/head.html
+++ b/head.html
@@ -4,3 +4,4 @@
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
 <link rel="preconnect" href="https://edge.adobedc.net"/>
+<inlinescript data-wdp="{"dep":"https://main--wknd-xwalk-westpac-test--abeheram.aem.live/scripts/scripts.js","fn":"wdp","prm":""}"></inlinescript>
